color palette update

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 body {
-	background: #8758ff;
+	background: #662549;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -19,13 +19,13 @@ body {
 }
 
 h1 {
-	color: #fff;
+	color: #E8BCB9;
 	margin-bottom: 0.5rem;
 	font-size: 1.75rem;
 }
 
 .TodoWrapper {
-	background: #1A1A40;
+	background: #451952;
 	margin-top: 5rem;
 	padding: 2rem;
 	border-radius: 5px;
@@ -34,7 +34,7 @@ h1 {
 .TodoForm {
 	width: 100%;
 	margin-top: 1rem;
-	margin-bottom: 3rem;
+	margin-bottom: 2rem;
 }
 
 .EditTodoForm {
@@ -49,7 +49,7 @@ h1 {
 .todo-input {
 	outline: none;
 	background: none;
-	border: 1px solid #8758ff;
+	border: 1px solid #AE445A;
 	padding: 0.75rem 1rem;
 	width: 200px;
 	color: #fff;
@@ -60,10 +60,10 @@ h1 {
 }
 
 .todo-btn {
-	background: #8758ff;
+	background: #AE445A;
 	color: #fff;
 	border: none;
-	padding: 0.79rem 0.55rem;
+	padding: 0.81rem 0.55rem;
 	cursor: pointer;
 	width: 80px;
 }
@@ -72,7 +72,7 @@ h1 {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background: #8758ff;
+	background: #F39F5A;
 	color: #fff;
 	padding: 0.75rem 1rem;
 	border-radius: 5px;
